grammar.js
    source_file: $ => seq(
      optional($.shebang),
      repeat($._statement),
      optional($.pipeline)
    ),

    shebang: $ => seq('#!', /[^\n]*/),

    _statement: $ => prec.left(PREC.STATEMENT, seq(
      optional($.label),
      choice(
        $.assertion,
        $.groovy_import,
        $.groovy_package,
        $.assignment,
        $.class_definition,
        $.enum_definition,
        $.declaration,
        $.do_while_loop,
        $.for_in_loop,
        $.for_loop,
        $.function_call,
        $.function_declaration,
        $.constructor_definition,
        $.function_definition,
        $.if_statement,
        $.juxt_function_call,
        $.return,
        $.switch_statement,
        $.try_statement,
        $.while_loop,
        $.closure,
        alias("break", $.break),
        alias("continue", $.continue),
        $._expression,
      ),
      optional(';')
    )),

    closure: $ => seq(
      '{',
      optional(choice('->', seq(alias($._param_list, $.parameter_list), '->'))),
      repeat($._statement),
      optional($._expression),
      '}'
    ),

    // -------------------------------------------------------------------------
    // Comments
    // -------------------------------------------------------------------------

    comment: _ => token(/\/\/[^\n]*/),

    block_comment: _ => token(prec(PREC.COMMENT,
      seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/',),
    )),

    groovy_doc: $ => choice(
      // single-line: /** ... */
      token(prec(PREC.DOC_COMMENT,
        seq('/**', /[^*\n]*/, '*/')
      )),
      // multi-line
      seq(
        token(prec(PREC.DOC_COMMENT, '/**')),
        token.immediate(/[*\s]*\n[*\s]*/),
        alias(token.immediate(/[^\n]+/), $.groovy_doc_first_line),
        repeat(
          choice(
            $.groovy_doc_param,
            $.groovy_doc_throws,
            $.groovy_doc_return,
            $.groovy_doc_see,
            $.groovy_doc_since,
            $.groovy_doc_deprecated,
            $.groovy_doc_author,
            $.groovy_doc_version,
            $.groovy_doc_inline_tag,
            $.groovy_doc_tag,
            $.groovy_doc_at_text,
            /([^@{*]|\*[^/]|\{[^@])+/,
          ),
        ),
        '*/',
      ),
    ),

    groovy_doc_param: $ => seq(
      '@param',
      $.identifier,
      optional(alias(/[^\n@{}*][^\n@{}]*/, $.groovy_doc_description)),
    ),

    groovy_doc_throws: $ => seq(
      choice('@throws', '@exception'),
      $.identifier,
      optional(alias(/[^\n@{}*][^\n@{}]*/, $.groovy_doc_description)),
    ),

    groovy_doc_return: $ => seq(
      '@return',
      optional(alias(/[^\n@{}*][^\n@{}]*/, $.groovy_doc_description)),
    ),

    groovy_doc_tag: _ => token(prec(PREC.COMMENT, /@[a-z]+/)),

    // fallback for malformed @ content
    groovy_doc_at_text: _ => token(/@[^@\s*]*/),

    // -------------------------------------------------------------------------
    // Imports / Package
    // -------------------------------------------------------------------------

    assignment: $ => prec(-1, choice(
      seq(
        choice($._juxtable_expression, $.parenthesized_expression),
        choice('=', '**=', '*=', '/=', '%=', '+=', '-=',
          '<<=', '>>=', '>>>=', '&=', '^=', '|=', '?='),
        $._expression
      ),
      $.increment_op,
    )),

    increment_op: $ => prec(2, choice(
      prec.left(PREC.UNARY, seq($._primary_expression, "++")),
      prec.left(PREC.UNARY, seq($._primary_expression, "--")),
      prec.right(PREC.UNARY, seq("++", $._primary_expression)),
      prec.right(PREC.UNARY, seq("--", $._primary_expression)),
    )),

    for_parameters: $ => seq(
      '(',
      field('initializer', optional(seq(
        $.declaration,
        repeat(seq(',', $.assignment))
      ))),
      ';',
      field('condition', optional($._expression)),
      ';',
      field('increment', optional(seq(
        $._statement,
        repeat(seq(',', $._statement))
      ))),
      ')',
    ),

    for_loop: $ => seq(
      'for',
      $.for_parameters,
      field('body', choice($._statement, $.closure)),
    ),

    for_in_loop: $ => prec(1, seq(
      'for',
      '(',
      choice($.declaration, field('name', $.identifier)),
      'in',
      field('collection', $._expression),
      ')',
      field('body', choice($._statement, $.closure)),
    )),

    return: $ => prec.right(1, seq('return', optional($._expression))),

    declaration: $ => seq(
      repeat($.annotation),
      optional($.access_modifier),
      choice(
        seq(
          repeat($.modifier),
          choice(
            '_',
            seq(
              choice(field('type', $._type), 'def'),
              field('name', $.identifier),
              optional(seq('=', field('value', $._expression)))
            ),
          )
        ),
        seq(
          repeat1($.modifier),
          choice(
            '_',
            seq(
              optional(choice(field('type', $._type), 'def')),
              field('name', $.identifier),
              optional(seq('=', field('value', $._expression)))
            ),
          )
        ),
      ),
    ),

    _param_list: $ => prec(1, list_of($.parameter)),

    parameter_list: $ => prec(1, seq(
      '(',
      optional(list_of($.parameter)),
      ')'
    )),

    // parameter: $ => prec(-1, seq(
    //   optional(field('type', choice($._type, 'def'))),
    //   field('name', $.identifier),
    //   optional(seq('=', field('value', $._expression))),
    // )),

    parameter: $ => prec(-1, seq(
      repeat($.annotation),
      optional($.modifier),
      optional(field('type', choice($._type, 'def'))),
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    )),

    function_definition: $ => prec(3, seq(
      repeat($.annotation),
      optional($.access_modifier),
      repeat($.modifier),
      field('type', choice($._type, 'def')),
      field('function', choice($.identifier, $.quoted_identifier)),
      field('parameters', $.parameter_list),
      field('body', $.closure),
    )),

    binary_op: ($) => choice(
      ...[
        ["%", PREC.STAR],
        ["*", PREC.STAR],
        ["/", PREC.STAR],
        ["+", PREC.PLUS],
        ["-", PREC.PLUS],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
        [">>>", PREC.SHIFT],
        ["..", PREC.SHIFT],
        ["..<", PREC.SHIFT],
        ["<..<", PREC.SHIFT],
        ["<..", PREC.SHIFT],
        ["<", PREC.COMPARE],
        ["<=", PREC.COMPARE],
        [">", PREC.COMPARE],
        [">=", PREC.COMPARE],
        ["in", PREC.COMPARE],
        ["!in", PREC.COMPARE],
        ["instanceof", PREC.COMPARE],
        ["!instanceof", PREC.COMPARE],
        ["as", PREC.COMPARE],
        ["==", PREC.COMPARE_EQ],
        ["!=", PREC.COMPARE_EQ],
        ["<=>", PREC.COMPARE_EQ],
        ["===", PREC.COMPARE_EQ],
        ["!==", PREC.COMPARE_EQ],
        ["=~", PREC.COMPARE_EQ],
        ["==~", PREC.COMPARE_EQ],
        ["&", PREC.BIN_AND],
        ["^", PREC.BIN_XOR],
        ["|", PREC.BIN_OR],
        ["&&", PREC.AND],
        ["||", PREC.OR],
        ["?:", PREC.ELVIS],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq($._expression, operator, $._expression))
      ),
      prec.right(PREC.POW, seq($._expression, "**", $._expression))
    ),

    dotted_identifier: $ => prec.left(1, seq(
      choice($._primary_expression, $._type_identifier),
      repeat1(seq('.', choice(
        $.identifier,
        $.quoted_identifier,
        $._type_identifier,
        $.parenthesized_expression,
      ))),
    )),

    _expression: $ => prec(1, choice(
      $._primary_expression,
      $.increment_op,
      $.binary_op,
      $.ternary_op,
      $.unary_op,
      $.access_op,
      $.closure,
      alias("null", $.null),
    )),

    _primary_expression: $ => prec.left(1, choice(
      $.number_literal,
      $.boolean_literal,
      $.string,
      $.list,
      $.map,
      $._callable_expression,
    )),

    _callable_expression: $ => choice(
      "this",
      $.function_call,
      $.parenthesized_expression,
      $._juxtable_expression,
      $._type_identifier,
    ),

    _juxtable_expression: $ => choice(
      $.dotted_identifier,
      $.identifier,
      $.index,
    ),

    function_call: $ => prec.left(2, seq(
      field('function', $._callable_expression),
      field('args', $.argument_list),
    )),

    _immediately_invoked_closure: $ => alias(
      $.__immediately_invoked_closure,
      $.function_call,
    ),

    argument_list: $ => prec.right(1, seq(
      prec.left(seq(
        '(',
        optional(list_of(choice($.map_item, $._expression))),
        ')'
      )),
      optional($.closure),
    )),

    parenthesized_expression: ($) => prec(PREC.PRIORITY, choice(
      seq("(", choice($._expression, $._immediately_invoked_closure), ")"),
    )),

    juxt_function_call: $ => seq(
      field('function', $._juxtable_expression),
      field('args', alias($._juxt_argument_list, $.argument_list)),
    ),

    _juxt_argument_list: $ => {
      const juxt_argument = choice(
        $.map_item,
        $.increment_op,
        $.binary_op,
        $.ternary_op,
        $.unary_op,
        $.access_op,
        $.closure,
        alias("null", $.null),
        $.number_literal,
        $.boolean_literal,
        $.string,
        $.list,
        $.map,
        "this",
        $.function_call,
        $.dotted_identifier,
        $.identifier,
        $.index,
      )
      return prec.left(2, seq(juxt_argument, repeat(seq(',', juxt_argument))))
    },

    unary_op: $ => choice(
      ...[
        ["+", PREC.UNARY],
        ["-", PREC.UNARY],
        ["~", PREC.TOP],
        ["!", PREC.TOP],
        ["new", PREC.TOP],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(operator, $._expression))
      ),
    ),

    builtintype: $ => choice(
      'int', 'boolean', 'char', 'short', 'long',
      'float', 'double', 'void',
    ),

    _type: $ => prec(2, choice(
      $.builtintype,
      $.array_type,
      $.type_with_generics,
      $._type_identifier,
    )),

    boolean_literal: $ => choice('true', 'false'),

    number_literal: $ => choice(
      /-?[0-9]+(_[0-9]+)*[DFGILdfgil]?/,
      /-?0x[0-9a-fA-F]+(_[0-9a-fA-F]+)*[DFGILdfgil]?/,
      /-?0b[0-1]+(_[0-1]+)*[DFGILdfgil]?/,
      /-?0[0-7]+(_[0-7]+)*[DFGILdfgil]?/,
      /-?[0-9]+(_[0-9]+)*\.[0-9]+(_[0-9]+)*([eE][0-9]+)?[DFGILdfgil]?/,
    ),

    map_item: $ => seq(
      field('key', choice(
        $.identifier,
        $._type_identifier,
        $.number_literal,
        $.string,
        $.parenthesized_expression,
      )),
      ':',
      field('value', $._expression),
    ),

    string: $ => choice($._plain_string, $._interpolate_string),

    _plain_string: $ => choice(
      seq(
        '\'',
        repeat(choice(
          alias(token.immediate(prec(1, /[^\\'\n]+/)), $.string_content),
          $.escape_sequence,
        )),
        '\'',
      ),
      seq(
        "'''",
        repeat(seq(
          optional(alias(token.immediate(prec(0, /[']{1,2}/)), $.string_internal_quote)),
          choice(
            alias(token.immediate(prec(1, /([^\\']|[']{1,2}[^'\\])+/)), $.string_content),
            seq(optional(/[']{1,2}/), $.escape_sequence),
          )
        )),
        "'''",
      ),
    ),

    _interpolate_string: $ => choice(
      seq(
        '"',
        repeat(choice(
          alias(token.immediate(prec(1, /[^$\\"\n]+/)), $.string_content),
          $.escape_sequence,
          $.interpolation,
        )),
        '"',
      ),
      seq(
        '"""',
        repeat(seq(
          choice(
            alias(token.immediate(prec(1, /([^$\\"]|["]{1,2}[^"$\\])+/)), $.string_content),
            seq(optional(/["]{1,2}/), $.escape_sequence),
            seq(optional(/["]{1,2}/), $.interpolation),
          )
        )),
        '"""',
      ),
      seq(
        '/',
        repeat1(choice(
          alias(token.immediate(prec(1, /[^$\\\/]+/)), $.string_content),
          alias('\\/', $.escape_sequence),
          alias(/\\[^\/]/, $.string_content),
          $.interpolation,
        )),
        '/',
      ),
      seq(
        '$/',
        repeat(choice(
          alias(token.immediate(prec(1, /([^$\/]|\/[^$]|\$[^\/$a-zA-Z{])+/)), $.string_content),
          alias('$/', $.escape_sequence),
          alias('$$', $.escape_sequence),
          $.interpolation,
        )),
        '/$',
      ),
    ),

    identifier: $ => IDENTIFIER_REGEX,
    _type_identifier: $ => alias(TYPE_REGEX, $.identifier),
    quoted_identifier: $ => choice($._plain_string, $._interpolate_string),

    pipeline: $ => seq('pipeline', $.closure),
  }
});
