test/corpus/comment.test
==========
Shebang
==========
#!/usr/bin/env groovy
pipeline {
}
---
(source_file
  (shebang)
  (pipeline
    (closure)))
==========
Single line comment
==========
//hello
x = 5 //TODO
---
(source_file
  (comment)
  (assignment
    (identifier)
    (number_literal))
  (comment))
==========
Multiline comment
==========
/*hello
* / */
---
(source_file
  (block_comment))
==========
groovydoc
==========
/**
* hello world
* @param abc - thing
* @throws Exc
* @asdf ghjkl
* @return
*/
x = hi
---
(source_file
  (groovy_doc
    (groovy_doc_first_line)
    (groovy_doc_param
      (identifier))
    (groovy_doc_throws
      (identifier))
    (groovy_doc_tag)
    (groovy_doc_return))
  (assignment
    (identifier)
    (identifier)))
==========
groovydoc with @TEXT
==========
/**
hello world
@THIS_IS_TEXT @tag
*/
---
(source_file
  (groovy_doc
    (groovy_doc_first_line)
    (groovy_doc_at_text)
    (groovy_doc_tag)))
